[package]
name = "ever-playground"
version = "0.7.3"
edition = "2021"

[lib]
name = "ever_playground"
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = "1"
num-bigint = "0.4"
pyo3 = { version = "0.19.0", features = ["extension-module", "num-bigint"] }
rand = "0.7"

ton_block = { git = "https://github.com/tonlabs/ever-block.git", tag = "1.9.74" }
ton_types = { git = "https://github.com/tonlabs/ever-types.git", tag = "2.0.13" }
ton_labs_assembler = { git = "https://github.com/tonlabs/ever-assembler", tag = "1.2.120" }
#ton_vm = { git = "https://github.com/tonlabs/ever-vm.git", tag = "1.8.172" }
ton_vm = { git = "ssh://git@github.com/tonlabs/ever-vm-private.git", branch = "cc-ctrls-access" }

[patch."ssh://git@github.com/tonlabs/ever-block-private.git"]
ton_block = { git = "https://github.com/tonlabs/ever-block.git", tag = "1.9.72" }

[patch."ssh://git@github.com/tonlabs/ever-types-private.git"]
ton_types = { git = "https://github.com/tonlabs/ever-types.git", tag = "2.0.13" }
