[build-system]
requires = ["maturin>=1.2,<1.3"]
build-backend = "maturin"

[project]
name = "ever-playground"
license = "GPL-3.0-only"
classifier = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
maintainer = "Mikhail Skvortsov"
maintainer-email = "mikhael.skvortsov@gmail.com"
requires-python = ">=3.7"
project-url = { homepage = "https://github.com/tonlabs/ever-playground" }
